	  through $schema->{normalize}->()

2.06 Jul 17 2003 - SamV
	- Added $storage->oid_isa($oid, "ClassName") method for
	  marshalling OIDs
	- Fixed minor bugs causing test suite to issue large warnings
	  on 5.8.1-RC2

2.07 Nov 8 2003 - SamV
	- Fixed bug with Tangram::Intr* and erasing objects that
	  referred to a class which didn't use their class name as
	  their table name [closes: 2650]
	- Added the ability to use limit => [ N, Y ] in
	  Tangram::Storage->select statements
	- Added Tangram::Coll::includes_or; see the man page for
	  Tangram::Expr
	- Enhancement of error message from
	  Tangram::Relational::Engine [related to 2631]
	- Support for using table types via $schema->{sql}{table_type}
	- Support for sub-selects with MySQL, for the one test that
	  uses them.  Also $storage->{no_subselects} is auto-detected.
	- Completed $storage->prefetch() function for all working
	  types, new test t/prefetch.t
	- If you have NULL values in array or hash slots in your
	  database, then it won't cause a hard error, except possibly
	  with prefetch() [related to 2631]
	- Various small fixes to bizarre internal error messages
	  [related to 2631]
	- Minor documentation fixes
	- Exceptions on various DB failures are now thrown when
	  DBI::execute() is called internally, rather than being
	  largely ignored.
	- Cosmetic Test Suite changes
	- ID column name wasn't being used for the index in
          Tangram::Relational::Engine (Kurt Stephens)
        Lost patches from 2002/06/25 (Kurt Stephens):
        - Added missing Tangram::Expr and Tangram::Filter operators:
            '+', '-', '*', '/',
            '&', '|', '!',
            '==', '!=', '<', '>', '<=', '>=',
            'eq', 'ne', 'lt', 'gt', 'le', 'ge',
            'cos', 'sin', 'acos',
        - Added argument swapping for non-commutative operators, like
	  "<".
        - Fixed export problem with 5.6.1 (reported by Kate Pugh)
	- deep_update with Tangram::Ref bug fix (reported by Aaron Mackey)