@@ -1,13 +1,15 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Tangram
-version:      2.07pre1
+version:      2.07pre4
 version_from: Tangram.pm
 installdirs:  site
 requires:
+    Date::Manip:                   0
     DBI:                           0
+    Scalar::Util:                  0
     Set::Object:                   1.04
     Test::More:                    0
 
 distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.16
+generated_by: ExtUtils::MakeMaker version 6.17
