@@ -1,17 +1,18 @@
 Tangram is an object-relational mapper. It makes objects persist in
 relational databases, and provides powerful facilities for retrieving
-and filtering them. Tangram fully supports object-oriented programming,
-including polymorphism, multiple inheritance and collections.
-It does so in an orthogonal fashion, that is, it doesn't require
-your classes to implement support functions nor inherit from a utility class.
+and filtering them. Tangram fully supports object-oriented
+programming, including polymorphism, multiple inheritance and
+collections.  It does so in an orthogonal fashion, that is, it doesn't
+require your classes to implement support functions nor inherit from a
+utility class.
 
 Tangram builds upon DBI, so you'll need to install DBI and at least
 one DBD driver if that is not done already. You will also need
-Set::Object. These modules are available from CPAN.
+Set::Object, Scalar::Util.  These modules are available from CPAN.
 
-If you intend to run the regression tests (recommended), you will
-also need to prepare an empty database before starting the installation
-procedure.
+If you intend to run the regression tests (recommended), you will also
+need to prepare an empty database before starting the installation
+procedure, and have Date::Manip installed.
 
 For more information, see the included POD files and
 http://www.tangram-persistence.org/
