@@ -3,13 +3,18 @@
 use strict;
 use lib 't';
 use Springfield;
-use Date::Manip qw(ParseDate);
+BEGIN {
+    eval "use Date::Manip qw(ParseDate);";
+    if ($@) {
+	eval 'use Test::More skip_all => "Date::Manip not installed";';
+    } else {
+	eval 'use Test::More tests => 11;';
+    }
+}
 
 tests_for_dialect(qw( mysql Pg ));
 
-$Tangram::TRACE = \*STDOUT;
-
-Springfield::begin_tests(6);
+#$Tangram::TRACE = \*STDOUT;
 
 my %ids;
 
@@ -39,33 +44,30 @@ my %ids;
    $storage->disconnect;
 }
 
-Springfield::leaktest;
+is(leaked, 0, "leaktest");
 
 {
-	my $storage = Springfield::connect;
+    my $storage = Springfield::connect;
 
-	my $jll = $storage->load( $ids{jll} );
+    my $jll = $storage->load( $ids{jll} );
 
-	if (1)
-	{
-		Springfield::test($jll->{birthTime} =~ /11/
-						  && $jll->{birthTime} =~ /34/
-						  && $jll->{birthTime} =~ /17/
-						 );
+    like($jll->{birthTime}, qr/11/, "load of Date::Manip object [1]");
+    like($jll->{birthTime}, qr/34/, "load of Date::Manip object [2]");
+    like($jll->{birthTime}, qr/17/, "load of Date::Manip object [3]");
 
-		Springfield::test($jll->{birthDate} =~ /1963/
-						  && $jll->{birthDate} =~ /13/
-						  && $jll->{birthDate} =~ /8/
-						 );
-	}
+    like($jll->{birthDate}, qr/1963/, "load of Date::Manip object [1]");
+    like($jll->{birthDate}, qr/13/, "load of Date::Manip object [2]");
+    like($jll->{birthDate}, qr/8/, "load of Date::Manip object [3]");
 
-	my $rp = $storage->remote(qw( NaturalPerson ));
-	my @results = $storage->select( $rp, $rp->{birth} > '1990-1-1' );
+    my $rp = $storage->remote(qw( NaturalPerson ));
+    my @results = $storage->select( $rp, $rp->{birth} > '1990-1-1' );
 
-	Springfield::test( @results == 1
-					   && $storage->id( $results[0] ) == $ids{chloe} );
+    is(@results, 1, "Select by date compare");
+    is($storage->id( $results[0] ), $ids{chloe},
+       "got right object back" );
 
-	Springfield::test( $results[0]->{incarnation} =~ /^\d{10}:\d\d:\d\d$/ );
+    like( $results[0]->{incarnation}, qr/^\d{10}:\d\d:\d\d$/,
+	  "Dates returned in ISO9601 form" );
 
 # 	if (optional_tests('epoch; no Time::Local',
 # 					   eval { require 'Time::Local' }, 1)) {
@@ -76,9 +78,9 @@ Springfield::leaktest;
 # 						 );
 # 	}
 
-	$storage->disconnect;
+    $storage->disconnect;
 }
 
-Springfield::leaktest;
+is(leaked, 0, "leaktest");
 
 1;
